--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,210 @@
-/* Use your own code or past solution for Great Idea Web Page CSS here! */
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
 
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
 
+/* Set every element's box-sizing to border-box */
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    height: 100%;
+    font-family: 'Titillium Web', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+    font-family: 'Bangers', cursive;
+    letter-spacing: 1px;
+    margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+h1 {
+	font-size: 60px;
+}
+h2 {
+	font-size: 35px;
+}
+h3 {
+	font-size: 20px;
+}
+
+p {
+	font-size: 16px;
+}
+
+body {
+	max-width: 700px;
+	margin: 0 auto;
+}
+nav {
+	display: flex;
+	justify-content: flex-start;
+	margin: 40px 0px;
+	width: 100%;
+	height: 20px;
+}
+
+nav a {
+	width: 100px;
+	color: gray;
+	font-size: 15px;
+	text-decoration: none;
+}
+
+.logo {
+	margin: -10px 0px -10px 10%;
+}
+
+.container {
+	display: flex;
+}
+
+.services-header-img {
+	width: 100%;
+}
+
+.head-section {
+	display: flex;
+}
+
+.head-left {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	width: 30%;
+	margin: 80px 50px 100px 70px;
+}
+
+button {
+	background-color: white;
+	border: 1px solid black;
+	width: 160px;
+	height: 30px;
+	margin: 10px 0px 0px 0px;
+}
+
+.head-img {
+	display: flex;
+	margin: 30px 0px 40px 20px;
+  width: 350px;
+  height: 350px;
+}
+
+.content{
+	display: flex;
+	margin: 30px 0px;
+}
+
+.summary {
+	margin: 30px 0px;
+}
+
+#top-first {
+	margin: 0px 15px 0px 0px;
+}
+
+#middle-img {
+	width: 100%;
+}
+
+#bottom-middle {
+	margin: 0px 15px;
+}
+
+#copyright {
+	width: 200px;
+	margin: 80px auto;
+}
+
+footer h3 {
+	margin-top: 25px;
+}
+
+footer img {
+	margin-top: 25px;
+}
+.grid {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+	margin: 15px 0px;
+}
+
+.grid section {
+	width: 48%;
+	background-color: lightgray;
+	border: 1px solid black;
+	margin: 15px 0px;
+	padding: 10px;
+}
+
+.facts {
+	display: flex;
+}
+
+ul {
+	list-style-type: disc;
+	line-height: 2;
+	margin: 15px 0px 0px 20px;
+}
