--- a/css/index.css
+++ b/css/index.css
@@ -80,29 +80,49 @@ h1, h2, h3, h4, h5 {
 
 /* Your code starts here! */
 h1 {
-	font-size: 60px;
+  font-size: 60px;
+  margin-bottom: 0px;
 }
+
 h2 {
 	font-size: 35px;
 }
+
 h3 {
-	font-size: 20px;
+	font-size: 14px;
 }
 
 p {
-	font-size: 16px;
+	font-size: 12px;
 }
 
 body {
 	max-width: 700px;
-	margin: 0 auto;
+  margin: 0 auto;
+  line-height: 1.25;
 }
+
+@media (max-width: 800px){
+  body {
+    max-width: 600px;
+  }
+}
+
 nav {
 	display: flex;
 	justify-content: flex-start;
 	margin: 40px 0px;
 	width: 100%;
 	height: 20px;
+}
+
+@media (max-width: 800px){
+  nav {
+    height: 100px;
+    margin: 10px 0px;
+    flex-wrap: wrap-reverse;
+    justify-content: space-around;
+  }
 }
 
 nav a {
@@ -112,8 +132,21 @@ nav a {
 	text-decoration: none;
 }
 
+@media (max-width: 800px){
+  nav a {
+    align-self: center;
+  }
+}
+
 .logo {
 	margin: -10px 0px -10px 10%;
+}
+
+@media (max-width: 800px){
+  .logo {
+    align-self: center;
+    margin: -10px 0px -10px 10%;
+  }
 }
 
 .container {
@@ -133,22 +166,27 @@ nav a {
 	flex-direction: column;
 	align-items: center;
 	width: 30%;
-	margin: 80px 50px 100px 70px;
+	margin: 50px 50px 70px 90px;
 }
 
-button {
-	background-color: white;
-	border: 1px solid black;
-	width: 160px;
-	height: 30px;
-	margin: 10px 0px 0px 0px;
+@media (max-width: 800px){
+  .head-left {
+    align-self: center;
+    margin: 50px 50px 70px 33%;
+  }
 }
 
 .head-img {
 	display: flex;
-	margin: 30px 0px 40px 20px;
-  width: 350px;
-  height: 350px;
+	margin: 20px -20px 50px 20px;
+  width: 300px;
+  height: 300px;
+}
+
+@media (max-width: 800px){
+  .head-img {
+    display: none;
+  }
 }
 
 .content{
@@ -207,4 +245,12 @@ ul {
 	list-style-type: disc;
 	line-height: 2;
 	margin: 15px 0px 0px 20px;
+}
+
+button {
+	background-color: white;
+	border: 1px solid black;
+	width: 160px;
+	height: 30px;
+	margin: 10px 0px 0px 0px;
 }
