--- a/css/index.css
+++ b/css/index.css
@@ -81,7 +81,7 @@ h1, h2, h3, h4, h5 {
 /* Your code starts here! */
 h1 {
   font-size: 60px;
-  margin-bottom: 0px;
+  margin-bottom: -15px;
 }
 
 h2 {
@@ -110,8 +110,8 @@ body {
 
 nav {
 	display: flex;
-	justify-content: flex-start;
-	margin: 40px 0px;
+	justify-content: space-between;
+	margin: 30px 0px 40px 0px;
 	width: 100%;
 	height: 20px;
 }
@@ -128,7 +128,7 @@ nav {
 nav a {
 	width: 100px;
 	color: gray;
-	font-size: 15px;
+	font-size: 12px;
 	text-decoration: none;
 }
 
@@ -139,7 +139,10 @@ nav a {
 }
 
 .logo {
-	margin: -10px 0px -10px 10%;
+  margin: ;
+  width: 20%;
+  height: 30px;
+  align-self: center;
 }
 
 @media (max-width: 800px){
@@ -166,14 +169,22 @@ nav a {
 	flex-direction: column;
 	align-items: center;
 	width: 30%;
-	margin: 50px 50px 70px 90px;
+	margin: 50px 50px 70px 18%;
 }
 
 @media (max-width: 800px){
   .head-left {
     align-self: center;
-    margin: 50px 50px 70px 33%;
+    margin: 20px 50px 50px 33%;
   }
+}
+
+button {
+	background-color: white;
+	border: 1px solid black;
+	width: 140px;
+	height: 30px;
+	margin: 10px 0px 0px 0px;
 }
 
 .head-img {
@@ -245,12 +256,4 @@ ul {
 	list-style-type: disc;
 	line-height: 2;
 	margin: 15px 0px 0px 20px;
-}
-
-button {
-	background-color: white;
-	border: 1px solid black;
-	width: 160px;
-	height: 30px;
-	margin: 10px 0px 0px 0px;
 }
