--- a/css/index.css
+++ b/css/index.css
@@ -124,6 +124,12 @@ nav {
     justify-content: space-around;
   }
 }
+@media (max-width: 500px){
+  nav {
+    flex-direction: column;
+    height: 300px;
+  }
+}
 
 nav a {
 	width: 100px;
@@ -135,11 +141,20 @@ nav a {
 @media (max-width: 800px){
   nav a {
     align-self: center;
+    width: 15%;
+  }
+}
+
+@media (max-width: 500px){
+  nav a{
+    width: 100%;
+    text-align: center;
+    padding: 5px 0px;
+    border-bottom: 1px solid black;
   }
 }
 
 .logo {
-  margin: ;
   width: 20%;
   height: 30px;
   align-self: center;
@@ -148,7 +163,7 @@ nav a {
 @media (max-width: 800px){
   .logo {
     align-self: center;
-    margin: -10px 0px -10px 10%;
+
   }
 }
 
@@ -205,6 +220,12 @@ button {
 	margin: 30px 0px;
 }
 
+@media (max-width: 500px){
+  .content {
+    flex-direction: column;
+  }
+}
+
 .summary {
 	margin: 30px 0px;
 }
@@ -221,9 +242,23 @@ button {
 	margin: 0px 15px;
 }
 
+@media (max-width: 500px){
+  .content section {
+    margin: 10px;
+  }
+
+  #top-first {
+    margin: 10px;
+  }
+
+  #bottom-middle {
+    margin: 10px;
+  }
+}
+
 #copyright {
 	width: 200px;
-	margin: 80px auto;
+	margin: 20px auto;
 }
 
 footer h3 {
@@ -232,6 +267,10 @@ footer h3 {
 
 footer img {
 	margin-top: 25px;
+}
+
+address {
+  font-size: 12px;
 }
 .grid {
 	display: flex;
